--- a/MagicVilla_VillaApi/MagicVilla_VillaApi.csproj
+++ b/MagicVilla_VillaApi/MagicVilla_VillaApi.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
